--- a/src/CodeCoverage.Domain/CodeCoverage.Domain.csproj
+++ b/src/CodeCoverage.Domain/CodeCoverage.Domain.csproj
@@ -30,6 +30,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Entities\City.cs" />
     <Compile Include="Entities\Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
