--- a/tests/CodeCoverage.Domain.Tests/CodeCoverage.Domain.Tests.csproj
+++ b/tests/CodeCoverage.Domain.Tests/CodeCoverage.Domain.Tests.csproj
@@ -38,6 +38,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Entities\StateTests.cs" />
     <Compile Include="Entities\PersonTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
