--- a/src/CodeCoverage.Prompt/CodeCoverage.Prompt.csproj
+++ b/src/CodeCoverage.Prompt/CodeCoverage.Prompt.csproj
@@ -32,11 +32,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Dto\CityDto.cs" />
+    <Compile Include="Dto\PersonDto.cs" />
+    <Compile Include="Dto\StateDto.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
