--- a/tests/CodeCoverage.Prompt.Tests/CodeCoverage.Prompt.Tests.csproj
+++ b/tests/CodeCoverage.Prompt.Tests/CodeCoverage.Prompt.Tests.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Dto\PersonDtoTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
